[gd_scene load_steps=10 format=3 uid="uid://ci6pe1ec6edpm"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_c3x71"]
[ext_resource type="PackedScene" uid="uid://dge5egx0wr625" path="res://scenes/player_ship.tscn" id="1_f7jy5"]
[ext_resource type="PackedScene" uid="uid://dej7h3skwq8i8" path="res://scenes/small_enemy.tscn" id="2_61bvy"]
[ext_resource type="PackedScene" uid="uid://jxyqi6p11q72" path="res://scenes/medium_enemy.tscn" id="3_cg58h"]
[ext_resource type="Texture2D" uid="uid://b5pjbae50ot7e" path="res://art/background.png" id="3_pr5pg"]
[ext_resource type="PackedScene" uid="uid://dutc1gq8dp4bu" path="res://scenes/hud.tscn" id="3_v4daf"]
[ext_resource type="PackedScene" uid="uid://bg3jn7mkpgfkv" path="res://scenes/bullet.tscn" id="4_38fe2"]
[ext_resource type="PackedScene" uid="uid://bn5jd5bl2fan8" path="res://scenes/big_enemy.tscn" id="4_sr085"]

[sub_resource type="Curve2D" id="Curve2D_s2ab7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 1152, 720)
}
point_count = 4

[node name="Main" type="Node"]
script = ExtResource("1_c3x71")
SmallEnemy = ExtResource("2_61bvy")
MediumEnemy = ExtResource("3_cg58h")
BigEnemy = ExtResource("4_sr085")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_pr5pg")

[node name="HUD" parent="." instance=ExtResource("3_v4daf")]

[node name="PlayerShip" parent="." instance=ExtResource("1_f7jy5")]
position = Vector2(80, 360)
Bullet = ExtResource("4_38fe2")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_s2ab7")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1152, 0)

[node name="ShipSpawnTimer" type="Timer" parent="."]
wait_time = 1.6

[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="got_hit" from="PlayerShip" to="." method="_on_player_ship_got_hit"]
[connection signal="timeout" from="ShipSpawnTimer" to="." method="_on_ship_spawn_timer_timeout"]
